--- a/styles/styles.css
+++ b/styles/styles.css
@@ -543,6 +543,7 @@ header {
 
 .contact-content-con {
   display: flex;
+  flex-direction: column;
   padding-top: 3.5rem;
 }
 .contact-content-con .left-contact {
@@ -606,7 +607,8 @@ header {
 }
 .contact-content-con .right-contact {
   flex: 3;
-  margin-left: 3rem;
+  margin-top: 0;
+  margin-left: 0;
 }
 .contact-content-con .right-contact .input-control {
   margin: 1.5rem 0;
@@ -626,9 +628,11 @@ header {
 }
 .contact-content-con .right-contact .i-c-2 {
   display: flex;
+  flex-direction: column;
 }
 .contact-content-con .right-contact .i-c-2 :last-child {
-  margin-left: 1.5rem;
+  margin-left: 0;
+  margin-top: 1.5rem;
 }
 .contact-content-con .right-contact .submit-btn {
   display: flex;
@@ -762,7 +766,7 @@ header {
   }
   .contact-content-con .right-contact {
     margin-left: 0;
-    margin-top: 2.5rem;
+    margin-top: 0;
   }
   .contact-content-con .right-contact .i-c-2 {
     flex-direction: column;
