--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,9 +7,11 @@
 
 :root {
   --color-primary: #191d2b;
-  --color-secondary: #27ae60;
-  --color-white: #ffffff;
+  --color-secondary: #27AE60;
+  --color-white: #FFFFFF;
   --color-black: #000;
+  --color-green: rgb(42, 252, 152);
+  --color-blue: rgb(41, 121, 255);
   --color-grey0: #f8f8f8;
   --color-grey-1: #dbe1e8;
   --color-grey-2: #b2becd;
@@ -18,7 +20,7 @@
   --color-grey-5: #2a2e35;
   --color-grey-6: #12181b;
   --br-sm-2: 14px;
-  --box-shadow-1: 0 3px 15px rgba(0, 0, 0, 0.2);
+  --box-shadow-1: 0 3px 15px rgba(0, 0, 0, .2);
 }
 
 .light-mode {
@@ -37,7 +39,7 @@
 
 body {
   background-color: var(--color-primary);
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 1.1rem;
   color: var(--color-white);
   transition: all 0.4s ease-in-out;
@@ -189,7 +191,8 @@ header {
   left: 0;
   top: 0;
   z-index: -1;
-  clip-path: polygon(0 15%, 74% 0, 100% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0 15%, 74% 0, 100% 100%, 0% 100%);
+          clip-path: polygon(0 15%, 74% 0, 100% 100%, 0% 100%);
 }
 .header-content .left-header .image {
   border-radius: var(--br-sm-2);
@@ -202,7 +205,8 @@ header {
 .header-content .left-header .image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: all 0.4s ease-in-out;
   filter: grayscale(100%);
 }
@@ -267,7 +271,7 @@ header {
   letter-spacing: 2px;
 }
 .about-container .right-about .about-item .abt-text .small-text::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 0;
   top: 15px;
@@ -354,7 +358,7 @@ header {
   position: relative;
 }
 .stat-title::before {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   top: 0;
@@ -432,7 +436,8 @@ header {
 .portfolios .portfolio-item img {
   width: 100%;
   height: 300px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-radius: 15px;
 }
 .portfolios .portfolio-item .hover-items {
@@ -516,7 +521,8 @@ header {
 .blogs .blog img {
   width: 100%;
   height: 300px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   filter: grayscale(100%);
@@ -607,18 +613,13 @@ header {
 }
 .contact-content-con .right-contact {
   flex: 3;
-<<<<<<< HEAD
   margin-top: 0;
-=======
-  margin-top: 2.5rem;
->>>>>>> 52d6f0d30f1878c062277c803fd5e46424b7848c
   margin-left: 0;
 }
 .contact-content-con .right-contact .input-control {
   margin: 1.5rem 0;
 }
-.contact-content-con .right-contact .input-control input,
-.contact-content-con .right-contact .input-control textarea {
+.contact-content-con .right-contact .input-control input, .contact-content-con .right-contact .input-control textarea {
   border-radius: 30px;
   font-weight: inherit;
   font-size: inherit;
@@ -673,7 +674,7 @@ header {
   padding: 1rem;
 }
 .main-btn::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -716,49 +717,136 @@ header {
   font-size: 6.3rem;
 }
 
-@media screen and (max-width: 600px) {
-  .theme-btn {
-    width: 50px;
-    height: 50px;
+/* ---- fancy word styles ---- */
+@keyframes float {
+  from, to {
+    transform: translateY(0%);
   }
-  .about-container {
-    grid-template-columns: 1fr;
-  }
-  .about-container .right-about {
-    grid-template-columns: 1fr;
-    padding-top: 2.5rem;
-  }
-  .about-container .left-about {
-    padding-right: 0;
-  }
-  .about-container .left-about p {
-    padding-left: 0;
-  }
-  .timeline {
-    grid-template-columns: 1fr;
-    padding-bottom: 6rem;
-  }
-  .portfolios {
-    grid-template-columns: 1fr;
-    padding-bottom: 6rem;
-  }
-  .blogs {
-    grid-template-columns: 1fr;
-    padding-bottom: 6rem;
-  }
-  .section {
-    padding: 2rem 2.5rem !important;
-  }
-  .main-title h2 {
-    font-size: 2rem;
-  }
-  .main-title h2 span {
-    font-size: 2.5rem;
-  }
-  .main-title h2 .bg-text {
-    font-size: 3rem;
+  50% {
+    transform: translateY(-3%);
   }
 }
+@keyframes background-pan {
+  from {
+    background-position: 1000% center;
+  }
+  to {
+    background-position: 0% center;
+  }
+}
+#text {
+  height: 30vh;
+  margin: 0rem;
+  overflow: hidden;
+  display: grid;
+}
+
+.line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.word {
+  color: var(--color-white);
+  font-family: "Rubik", sans-serif;
+  margin: 0rem;
+  text-transform: uppercase;
+  transition: opacity 250ms ease;
+}
+
+#text:has(.fancy:hover) .word:not(.fancy:hover) {
+  opacity: 0.2;
+}
+
+.fancy span {
+  display: inline-block;
+}
+
+.fancy > .outer {
+  transition: transform 350ms ease;
+}
+
+.fancy:hover > .outer {
+  transition-duration: 800ms;
+}
+
+.fancy:hover > .outer > .inner {
+  animation: float 5s ease infinite;
+}
+
+.fancy:hover > .outer > .inner > .letter {
+  background: linear-gradient(to right, var(--color-blue), var(--color-green), var(--color-blue));
+  background-size: 1000%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: background-pan 150s linear infinite;
+}
+
+.fancy:hover > .outer:nth-child(1) {
+  transform: translate(-80%, 60%) rotate(8deg);
+}
+
+.fancy:hover > .outer:nth-child(2) {
+  transform: translate(-40%, 20%) rotate(4deg);
+}
+
+.fancy:hover > .outer:nth-child(3) {
+  transform: translate(-10%, 60%) rotate(-6deg);
+}
+
+.fancy:hover > .outer:nth-child(4) {
+  transform: translate(0%, 8%) rotate(-8deg);
+}
+
+.fancy:hover > .outer:nth-child(5) {
+  transform: translate(0%, -20%) rotate(5deg);
+}
+
+.fancy:hover > .outer:nth-child(6) {
+  transform: translate(0%, 20%) rotate(-3deg);
+}
+
+.fancy:hover > .outer:nth-child(7) {
+  transform: translate(0%, -40%) rotate(-5deg);
+}
+
+.fancy:hover > .outer:nth-child(8) {
+  transform: translate(0%, 15%) rotate(10deg);
+}
+
+.fancy:hover > .outer:nth-child(9) {
+  transform: translate(0%, -50%) rotate(8deg);
+}
+
+.fancy:hover > .outer:nth-child(10) {
+  transform: translate(0%, 15%) rotate(-6deg);
+}
+
+.fancy:hover > .outer:nth-child(11) {
+  transform: translate(50%, -10%) rotate(-3deg);
+}
+
+.fancy:hover > .outer:nth-child(12) {
+  transform: translate(120%, -30%) rotate(-10deg);
+}
+
+.fancy:hover > .outer:nth-child(13) {
+  transform: translate(-80%, 15%) rotate(-3deg);
+}
+
+.fancy:hover > .outer:nth-child(14) {
+  transform: translate(20%, 20%) rotate(4deg);
+}
+
+.fancy:hover > .outer:nth-child(15) {
+  transform: translate(15%, -30%) rotate(-6deg);
+}
+
+.fancy:hover > .outer:nth-child(16) {
+  transform: translate(-10%, 60%) rotate(15deg);
+}
+
 @media screen and (max-width: 1432px) {
   header {
     padding: 0 !important;
@@ -867,151 +955,62 @@ header {
     font-size: 4rem;
   }
 }
-
-/*# sourceMappingURL=styles.css.map */
-
-
-/* ---- fancy word styles ---- */
-
-:root {  
-    --green: rgb(42, 252, 152);
-    --blue: rgb(41, 121, 255);
+@media screen and (max-width: 600px) {
+  .theme-btn {
+    width: 50px;
+    height: 50px;
   }
-  
-  @keyframes float {
-    from, to {
-      transform: translateY(-0%);
-    }
-    
-    50% {    
-      transform: translateY(-3%);
-    }
+  .about-container {
+    grid-template-columns: 1fr;
   }
-  
-  @keyframes background-pan {
-    from {
-      background-position: 1000% center;
-    }
-    
-    to {
-      background-position: 0% center;
-    }
+  .about-container .right-about {
+    grid-template-columns: 1fr;
+    padding-top: 2.5rem;
   }
-  
-  #text {
-    height: 30vh;
-    margin: 0rem;
-    overflow: hidden;
+  .about-container .left-about {
+    padding-right: 0;
+  }
+  .about-container .left-about p {
+    padding-left: 0;
+  }
+  .timeline {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .portfolios {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .blogs {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .section {
+    padding: 2rem 2.5rem !important;
+  }
+  .main-title h2 {
+    font-size: 2rem;
+  }
+  .main-title h2 span {
+    font-size: 2.5rem;
+  }
+  .main-title h2 .bg-text {
+    font-size: 3rem;
+  }
+}
+@media screen and (min-width: 1840px) {
+  .mobile-only {
+    display: none;
+  }
+  .desktop-only {
     display: grid;
   }
-  
-  .line {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+}
+@media screen and (max-width: 1840px) {
+  .mobile-only {
+    display: block;
   }
-  
-  .word {
-    color: white;
-    font-family: "Rubik", sans-serif;
-    margin: 0rem;
-    text-transform: uppercase;
-    transition: opacity 250ms ease;
+  .desktop-only {
+    display: none;
   }
-  
-  #text:has(.fancy:hover) .word:not(.fancy:hover) {
-    opacity: 0.2;
-  }
-  
-  .fancy span {
-    display: inline-block;
-  }
-  
-  .fancy > .outer {
-    transition: transform 350ms ease;
-  }
-  
-  .fancy:hover > .outer {
-    transition-duration: 800ms;
-  }
-  
-  .fancy:hover > .outer > .inner {
-    animation: float 5s ease infinite;
-  }
-  
-  .fancy:hover > .outer > .inner > .letter {
-    background: linear-gradient(
-      to right,
-      var(--blue),
-      var(--green),
-      var(--blue)
-    );
-    background-size: 1000%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: background-pan 150s linear infinite;
-  }
-  
-  .fancy:hover > .outer:nth-child(1) {
-    transform: translate(-80%, 60%) rotate(8deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(2) {
-    transform: translate(-40%, 20%) rotate(4deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(3) {
-    transform: translate(-10%, 60%) rotate(-6deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(4) {
-    transform: translate(0%, 8%) rotate(-8deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(5) {
-    transform: translate(0%, -20%) rotate(5deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(6) {
-    transform: translate(0%, 20%) rotate(-3deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(7) {
-    transform: translate(0%, -40%) rotate(-5deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(8) {
-    transform: translate(0%, 15%) rotate(10deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(9) {
-    transform: translate(0%, -50%) rotate(8deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(10) {
-    transform: translate(0%, 15%) rotate(-6deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(11) {
-    transform: translate(50%, -10%) rotate(-3deg);
-  }
-  
-  .fancy:hover > .outer:nth-child(12) {
-    transform: translate(120%, -30%) rotate(-10deg);
-  }
-
-  .fancy:hover > .outer:nth-child(13) {
-    transform: translate(-80%, 15%) rotate(-3deg);
-  }
-
-  .fancy:hover > .outer:nth-child(14) {
-    transform: translate(20%, 20%) rotate(4deg);
-  }
-
-  .fancy:hover > .outer:nth-child(15) {
-    transform: translate(15%, -30%) rotate(-6deg);
-  }
-
-  .fancy:hover > .outer:nth-child(16) {
-    transform: translate(-10%, 60%) rotate(15deg);
-  }
+}/*# sourceMappingURL=styles.css.map */
