--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -254,53 +254,97 @@ header {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
 
-  .right-about {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
+  #cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;  
+    max-width: 916px;
+    width: calc(100% - 20px);
+  }
+  
+  #cards:hover > .card::after {
+    opacity: 1;
+  }
+  
+  .card {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    height: 260px;
+    flex-direction: column;
+    position: relative;
+    width: 300px;  
+  }
+  
+  .card:hover::before {
+    opacity: 1;
+  }
+  
+  .card::before,
+  .card::after {
+    border-radius: inherit;
+    content: "";
+    height: 100%;
+    left: 0px;
+    opacity: 0;
+    position: absolute;
+    top: 0px;
+    transition: opacity 500ms;
+    width: 100%;
+  }
+  
+  .card::before {
+    background: radial-gradient(
+      800px circle at var(--mouse-x) var(--mouse-y), 
+      rgba(255, 255, 255, 0.06),
+      transparent 40%
+    );
+    z-index: 3;
+  }
+  
+  .card::after {  
+    background: radial-gradient(
+      600px circle at var(--mouse-x) var(--mouse-y), 
+      rgba(255, 255, 255, 0.4),
+      transparent 40%
+    );
+    z-index: 1;
+  }
+  
+  .card > .card-content {
+    background-color: var(--color-primary);
+    border-radius: inherit;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    inset: 1px;
+    padding: 10px;
+    position: absolute;
+    z-index: 2;
+  }
 
-    .about-item {
-      border: 1px solid var(--color-grey-5);
-      border-radius: 5px;
-      transition: all .4s ease-in-out;
-      box-shadow: 1px 2px 15px rgba(0, 0, 0, .1);
+  .large-text {
+    font-size: 3rem;
+    font-weight: 700;
+    color: var(--color-secondary);
+  }
 
-      &:hover {
-        cursor: default;
-        transform: translateY(-5px);
-        border: 1px solid var(--color-secondary);
-        box-shadow: 1px 4px 15px rgba(0, 0, 0, .32);
-      }
+  .small-text {
+    padding-left: 3rem;
+    position: relative;
+    text-transform: uppercase;
+    color: var(--color-grey-1);
+    letter-spacing: 2px;
 
-      .abt-text {
-        padding: 1.5rem;
-        display: flex;
-        flex-direction: column;
-
-        .large-text {
-          font-size: 3rem;
-          font-weight: 700;
-          color: var(--color-secondary);
-        }
-
-        .small-text {
-          padding-left: 3rem;
-          position: relative;
-          text-transform: uppercase;
-          color: var(--color-grey-1);
-          letter-spacing: 2px;
-
-          &::before {
-            content: '';
-            position: absolute;
-            left: 0;
-            top: 15px;
-            width: 2rem;
-            height: 2px;
-            background-color: var(--color-grey-5);
-          }
-        }
-      }
+    &::before {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 15px;
+      width: 2rem;
+      height: 2px;
+      background-color: var(--color-grey-5);
     }
   }
 
