--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -605,7 +605,7 @@ header {
   grid-gap: 2rem;
   margin-top: 3rem;
 
-  .blog {
+  #blog1, #blog2, #blog3, #blog4, #blog5, #blog6 {
     position: relative;
     background-color: var(--color-grey-5);
     border-radius: 5px;
@@ -618,20 +618,16 @@ header {
       transition: all .4s ease-in-out;
 
       img {
-        filter: grayscale(0);
-        transform: scale(1, 1);
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.8);
+        animation: pulse 800ms ease-in-out;
       }
     }
 
     img {
       width: 100%;
       height: 300px;
-      object-fit: cover;
       border-top-left-radius: 5px;
       border-top-right-radius: 5px;
-      filter: grayscale(100%);
-      transition: all .4s ease-in-out;
+      transition: all .4s ease-in-out
     }
 
     .blog-text {
@@ -1071,6 +1067,19 @@ header {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   white-space: nowrap;
+}
+
+
+/* ---- fancy word styles ---- */
+
+@keyframes pulse {
+  from, to {
+    scale: 1;
+  }
+  
+  50% {
+    scale: 1.08;
+  }
 }
 
 @import "media";
